login registration 3 activity added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,8 @@
     <string name="login">Log In</string>
     <string name="implemented_next">Implemented Next</string>
 
+    <string name="login_email_hint">Email</string>
+    <string name="login_password_hint">Password</string>
+
 
 </resources>
